--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilo/estilo.css">
 </head>
+
 <body>
-    
-    <h1>Aqui vamos hacer un blog</h1>
-    <p>Y este es el parrafo de inicio</p>
-    <p>de su vida y obra maestra</p>
+
+    <div id="container">
+        <div id="post">
+
+            <h1>Este es el titulo atractivo del post</h1>
+
+            <p>
+                y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas
+            </p>
+
+        </div>
+    </div>
 
 </body>
+
 </html>
