agregado mas contenido y cambio de fuente

--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,8 @@
                 y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas
             </p>
 
+            <p>hola mundo</p>
+
         </div>
     </div>
 
