--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 
     <div id="container">
         <div id="cabecera">
-            cabecera
+            prueba
         </div>
         <div id="post">
 
@@ -24,6 +24,7 @@
             </p>
 
             <p>hola mundo</p>
+            <p>suscribete</p>
 
         </div>
     </div>
