--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 
     <div id="container">
         <div id="cabecera">
-            hola
+            prueba 2
         </div>
         <div id="post">
 
